<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="8dp">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/act_welcome_status_1"
            android:background="#ace33f" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1sp"
            android:layout_weight="1"
            android:id="@+id/act_welcome_status_2"
            android:background="#d0cdcd"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="1sp"
            android:id="@+id/act_welcome_status_3"
            android:background="#d0cdcd"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1sp"
            android:layout_weight="1"
            android:id="@+id/act_welcome_status_4"
            android:background="#d0cdcd"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1sp"
            android:layout_weight="1"
            android:id="@+id/act_welcome_status_5"
            android:background="#d0cdcd"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp"
        android:background="@color/light_white">
        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:id="@+id/imageView"
            android:src="@drawable/shield_logo_removebg_preview"
            android:layout_gravity="center_horizontal" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act_password_text"
            android:textSize="18sp"
            android:id="@+id/sub_middle_text"
            android:gravity="center_horizontal"
            android:textColor="@color/colorBlack" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:id="@+id/act_password_app"
            android:text="@string/app_password"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:id="@+id/app_password"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:layout_weight="8"
            android:importantForAutofill="no" />

    </LinearLayout>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:padding="10sp"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:id="@+id/secure_password_text"
        android:text="@string/act_password_secure_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:id="@+id/act_password_secret"
            android:text="@string/secure_password"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/edit_text_border"
            android:id="@+id/secure_password"
            android:layout_weight="8" />

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:text="@string/next"
        android:textStyle="bold"
        android:textColor="@color/light_white"
        android:id="@+id/act_welcome_next_btn" />
    </LinearLayout>
</ScrollView>