<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="8dp">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/act_welcome_status_1"
            android:background="#ace33f" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1sp"
            android:layout_weight="1"
            android:id="@+id/act_welcome_status_2"
            android:background="#d0cdcd"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="1sp"
            android:id="@+id/act_welcome_status_3"
            android:background="#d0cdcd"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1sp"
            android:layout_weight="1"
            android:id="@+id/act_welcome_status_4"
            android:background="#d0cdcd"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1sp"
            android:layout_weight="1"
            android:id="@+id/act_welcome_status_5"
            android:background="#d0cdcd"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:id="@+id/act_device_text"
            android:text="@string/turn_on_this_service_to_accept_lock_erase_and_other_admin_remote_commands"/>
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:id="@+id/act_device_switch"
            android:text="@string/admin_service"/>
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        android:text="@string/next"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:id="@+id/act_welcome_next_btn" />

</LinearLayout>